tests/errors/second_stage/entry_constant/entry_constant.as
; trying to define a constant as entry
.define myConst = 2
.entry myConst